--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
-
-<!--situação-problema-->
-<!DOCTYPE html>
-<html lang="pt">
+<html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>SAVINI</title>
     </head>
-    <title>SITUAÇÃO-PROBLEMA</title>
     <body>
-        <h1>SAVINIS - ESTOQUE ONLINE</h1>
-        <script src="script.js"></script>
+        <script>src="script.js"</script>
+        <h1>SAVINI - ESTOQUE VIRTUAL</h1>
     </body>
 </html>
