--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>SAVINI</title>
     </head>
     <body>
-        <script>src="script.js"</script>
+        <script src="script.js">type="text/javascript"</script>
         <h1>SAVINI - ESTOQUE VIRTUAL</h1>
     </body>
 </html>
