--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <body>
         <script src="script.js">type="text/javascript"</script>
         <h1>SAVINI - ESTOQUE VIRTUAL</h1>
+        <p>ATUALIZE O ESTOQUE DE HOJE</p>
+        <button onclick="tipoEntrada()">Atualizar Estoque</button>
+        <p id= "tipoEntrada"></p>
     </body>
 </html>
